clusters/dev/portal/homepage/deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: homepage-config
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
            - name: homepage-config
              mountPath: /app/config/services.yaml
              subPath: services.yaml
            - name: homepage-config
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
            - name: homepage-config
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
            - name: homepage-config
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yaml

            - name: homepage-logs
              mountPath: /app/config/logs

      volumes:
        - name: homepage-config
          configMap:
            name: homepage-config
        - name: homepage-logs
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: portal
spec:
  selector:
    app: homepage
  ports:
    - name: http
      port: 80
      targetPort: 3000
